--- a/Skins.html
+++ b/Skins.html
@@ -19,7 +19,7 @@
         <div class="BarraInicial">
             <ul>
                 <a href="./index.html" target="">Home</a>
-                <a href="Skins.css" target="">Skins</a>
+                <a href="Skins.html" target="">Skins</a>
                 <a href="Historia.html" target="">História</a>
             </ul>
             </nav>
